# serializer version: 1
# name: test_stage_diff
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_stage_diff.1
  '''
  Local changes to be deployed:
    added:    test.txt
  
  '''
# ---
# name: test_stage_diff.2
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_stage_diff.3
  '''
  Local changes to be deployed:
    added:    another.md
  
  '''
# ---
# name: test_stage_diff.4
  '''
  Your stage is up-to-date with your local deploy root.
  
  '''
# ---
# name: test_stage_diff.5
  '''
  Local changes to be deployed:
    modified: test.txt
  
  '''
# ---
# name: test_stage_diff.6
  '''
  Local changes to be deployed:
    added:    added_file.py
    modified: another.md
  
  Deleted paths to be removed from your stage:
    deleted:  test.txt
  
  '''
# ---
# name: test_stage_execute
  list([
    dict({
      'Error': None,
      'File': '@test_stage_execute/script1.sql',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@test_stage_execute/directory/script2.sql',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@test_stage_execute/directory/subdirectory/script3.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_stage_execute.1
  list([
    dict({
      'Error': None,
      'File': '@test_stage_execute/script_template.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_stage_execute_python
  list([
    dict({
      'Error': None,
      'File': '@test_stage_execute/script1.py',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@test_stage_execute/script_template.py',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_user_stage_execute
  list([
    dict({
      'Error': None,
      'File': '@~/execute/sql/script1.sql',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@~/execute/sql/directory/script2.sql',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@~/execute/sql/directory/subdirectory/script3.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_user_stage_execute.1
  list([
    dict({
      'Error': None,
      'File': '@~/execute/template/script_template.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
